--- a/web/src/main/webapp/resources/css/style.css
+++ b/web/src/main/webapp/resources/css/style.css
@@ -16,11 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 body{
     background: url("images/image.jpg");
     background-size: 200%;
-    background-repeat: no-repeat;
-  
-    
-    
-    
+    background-repeat: no-repeat;    
   }
   
 
@@ -37,8 +33,8 @@ input::-webkit-inner-spin-button {
 .terminal {
     padding: 10px;
     border-radius: 1em;
-    height: 380px;
-    width: 400px;
+    height: 480px;
+    width: 300px;
     margin: auto;
     background-color: #869589;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -51,10 +47,15 @@ input::-webkit-inner-spin-button {
     color: black;
     border-radius: 5px;
     width: 100%;
-    height: 65%;
+    height: 85%;
     
 }
 
+.yearmonth input{
+        display: inline-block;
+        margin:0 auto;
+        width: 60px;
+}
 
 .button {
     font-family: 'Orbitron', sans-serif;
